# citizens-exercise

./: .pre-commit-config.yaml  README.md  main.py  models.py  permission_handler.py  pyproject.toml
loaders/: base.py  json.py
tests/: conftest.py  test_config.json  test_config.py  test_resolver.py
